[project]
name = "langgraph-supervisor-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.5",
    "langgraph-supervisor>=0.0.22",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
